# rusty_backend

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: aws.yaml  build.yaml  build_push.yaml
scripts/: deploy.sh
src/: config.rs  db.rs  dberror.rs  load_dotenv.rs  main.rs  model.rs  test.rs
src/models/: user.rs
static/: index.html
