[package]
name = "rusty_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
dotenv = "0.15.0"
faker_rand = "0.1.1"
fs = "0.0.5"
mongodb = "3.3.0"
rand = "0.9.2"
serde = {version = "1.0.228", features = ["derive"]}
surrealdb = "2.3.10"
thiserror = "2.0.17"
